--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /.metadata/
-/i2c_loopback/Debug/
-/i2c_loopback/system/
-/i2c_loopback/ldscripts/
+/i2c_loop/Debug/
+/i2c_loop/system/
+/i2c_loop/ldscripts/
